--- a/backend/documents/document27.tex
+++ b/backend/documents/document27.tex
@@ -1,16 +1,50 @@
 \documentclass{article}
+\usepackage{amsmath}
+
 \begin{document}
-Wzór 151:
-\[ \lim_{{n \to \infty}} \frac{n!}{n^n} = 0 \]
 
-Wzór 152:
-\[ \frac{d}{dx}\left(\arcsin(x)\right) = \frac{1}{\sqrt{1-x^2}} \]
+\section*{Wzory z analizy matematycznej}
 
-Wzór 153:
-\[ \iint_S \mathbf{F} \cdot d\mathbf{S} = \iiint_V \nabla \cdot \mathbf{F} \,dV \]
+\subsection*{Granice}
 
-Dowód 5: \\
-Rozważmy równanie kwadratowe \( ax^2 + bx + c = 0 \). Jego rozwiązania to
-\[ x = \frac{-b \pm \sqrt{b^2-4ac}}{2a} \].
+\[
+    \lim_{x \to a} f(x) = L 
+\]
+\[
+    \lim_{n \to \infty} \frac{1}{n} = 0 
+\]
+\[
+    \lim_{x \to \infty} e^{-x} = 0
+\]
+
+\subsection*{Pochodne}
+
+\[
+    f'(x) = \lim_{h \to 0} \frac{f(x+h) - f(x)}{h} 
+\]
+\[
+    \frac{d}{dx} (x^n) = nx^{n-1} 
+\]
+\[
+    \frac{d}{dx} \sin x = \cos x
+\]
+
+\subsection*{Całki}
+
+\[
+    \int f(x) \,dx = F(x) + C 
+\]
+\[
+    \int x^n \,dx = \frac{x^{n+1}}{n+1} + C 
+\]
+\[
+    \int \sin x \,dx = -\cos x + C
+\]
+
+\subsection*{Szereg Taylora}
+
+\[
+    f(x) = f(a) + f'(a)(x-a) + \frac{f''(a)}{2!}(x-a)^2 + \cdots
+\]
 
 \end{document}
