--- a/backend/documents/document29.tex
+++ b/backend/documents/document29.tex
@@ -17,7 +17,29 @@
     \lim_{n \to \infty} \left(1 + \frac{x}{n}\right)^n = e^x
 \]
 
-\subsection*{Szereg funkcyjny}
+\begin{document}
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+\maketitle
+Nad zadaniami myślałem sam. 
+\section*{Zadanie 1.}
+\subsection*{(a)}
+Niech $\mathcal{A}$ będzie taką rodziną indeksowaną, że $\mathcal{A}_m = \{\langle m,r\rangle : r \in \rze \}$ dla $m\in \rze \setminus \mathbb{Q}$ (będzie to rodzina pionowych prostych o pierwszej współrzędnej niewymiernej) 
+Oczywiście $\mathcal{A}$ jest rodziną zbiorów parami rozłącznych.\\\
+$\vert \mathcal{A}_m \vert = \vert \rze \vert = \con $ (ze względu na wybór drugiej współrzędnej)\\\
+$\vert \mathcal{A} \vert = \vert \rze \setminus \mathbb{Q}\vert  = \con$ (ze względu na ilość $m$)\\\\
+Ponieważ $\langle m,r\rangle \notin (\mathbb{Q} \times \mathbb{Q})$ dla $m$ niewymiernego to $\langle m,r\rangle \in (\rze \times \rze) \setminus ( \mathbb{Q} \times \mathbb{Q}) $.
+Wobec tego istnieje rodzina mocy continuum podzbiorów mocy continuum, parami rozłącznych w $(\rze \times \rze) \setminus ( \mathbb{Q} \times \mathbb{Q})$
 
 \[
     f(x) = \sum_{n=0}^{\infty} \frac{f^{(n)}(a)}{n!}(x-a)^n
